--- a/GA_1_FASHION_BLOG/css/main.css
+++ b/GA_1_FASHION_BLOG/css/main.css
@@ -1,4 +1,6 @@
-body{
+/*One good way to organize your CSS is to seperate by types. Start with tags, then list classes, then ids, and then a mixture of tags, classes, and ids (like ".container #lightbox .light ")*/
+
+body {
 	margin-left:175px;
 	margin-right: 39%;
 	border-left-style: solid;
@@ -9,6 +11,7 @@ body{
 	font-family: lato,sans-serif;
 	line-height: 1.5;
 }
+
 h1 {
 	font-weight: 100;
 	font-size: 3.5em;
@@ -16,31 +19,28 @@ h1 {
 	padding-top: 1.5em;
 	line-height:2px;
 }
+
 h2 {
 	font-weight: 100;
 	font-size: 24px;
 	color:#606060;
 	line-height:2px;
 }
+
 h3 {
 	font-weight: 100;
 	font-size: 1.5em;
 	color:#404040;
 	line-height:18px;
 }
-.headmenu{
-	font-size: 11px;
-	word-spacing:15px;
-	color:#C0C0C0;
-	width: 16.66%;
-	float: left;
-}
-p{
+
+p {
 	color:#606060;
 	margin-left: 5px;
 	padding-bottom: 5px;
 }
-span{
+
+span {
 	font-size:60px;
 	font-weight:100;
 	padding-left:10px;
@@ -48,47 +48,49 @@ span{
 	color: #D8D8D8;
 	float:left; height: 55px; width: 40px;
 }
-img{
+
+img {
 	height:150px;
 	width:100%;
 }
-.date{
+
+.headmenu {
+	font-size: 11px;
+	word-spacing:15px;
+	color:#C0C0C0;
+	width: 16.66%;
+	float: left;
+}
+
+.date {
 	font-weight:100;
 	font-size:24px;
 	padding-top:1em;
 	color:#C0C0C0;
 }
-#next{
+
+.category {
+	font-weight:100;
+	font-size:11px;
+	padding-top: 15px;
+}
+
+.footertitle {
+	color:red;
+}
+
+.footerdivider {
+	color:#C0C0C0
+}
+
+#next {
 	text-align:right;
 	padding-top:12px;
 	padding-bottom: 10px;
 	color:red;
 }
-.category{
-	font-weight:100;
-	font-size:11px;
-	padding-top: 15px;
-}
-.footertitle{
-	color:red;
-}
-.footerdivider{
-	color:#C0C0C0
-}
 
-#signature{
+#signature {
 	color:#C0C0C0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
