--- a/GA_2_Traffic_Lights/css/main.css
+++ b/GA_2_Traffic_Lights/css/main.css
@@ -24,7 +24,7 @@ body{
 	height: 100px;
 	margin-left: 21%;
 	margin-top: 10%;
-	transition: width 3s ease 0s
+	transition: width 3s ease 0s;
 }
 .lights:hover{
 	width: 125px;
